# lab9

./: CMakeLists.txt  mystring.cpp  mystring.h  testingfile.cpp
